--- a/app/views/acquisition_sales/edit.html.erb
+++ b/app/views/acquisition_sales/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Acquisition Sale</h1>
 
-<%= render 'form', acquisition_sale: @acquisition_sale %>
+<%= render 'form', acquisition_product: @acquisition_product %>
 
-<%= link_to 'Show', @acquisition_sale %> |
-<%= link_to 'Back', acquisition_sales_path %>
+<%= link_to 'Show', @acquisition_product %> |
+<%= link_to 'Back', acquisition_products_path %>
