--- a/app/views/acquisition_sales/index.html.erb
+++ b/app/views/acquisition_sales/index.html.erb
@@ -13,14 +13,14 @@
   </thead>
 
   <tbody>
-    <% @acquisition_sales.each do |acquisition_sale| %>
+    <% @acquisition_products.each do |acquisition_product| %>
       <tr>
-        <td><%= acquisition_sale.product %></td>
-        <td><%= acquisition_sale.qty %></td>
-        <td><%= acquisition_sale.value %></td>
-        <td><%= link_to 'Show', acquisition_sale %></td>
-        <td><%= link_to 'Edit', edit_acquisition_sale_path(acquisition_sale) %></td>
-        <td><%= link_to 'Destroy', acquisition_sale, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= acquisition_product.product %></td>
+        <td><%= acquisition_product.qty %></td>
+        <td><%= acquisition_product.value %></td>
+        <td><%= link_to 'Show', acquisition_product %></td>
+        <td><%= link_to 'Edit', edit_acquisition_product_path(acquisition_product) %></td>
+        <td><%= link_to 'Destroy', acquisition_product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Acquisition Sale', new_acquisition_sale_path %>
+<%= link_to 'New Acquisition Sale', new_acquisition_product_path %>
