--- a/app/views/acquisition_sales/new.html.erb
+++ b/app/views/acquisition_sales/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Acquisition Sale</h1>
 
-<%= render 'form', acquisition_sale: @acquisition_sale %>
+<%= render 'form', acquisition_product: @acquisition_product %>
 
-<%= link_to 'Back', acquisition_sales_path %>
+<%= link_to 'Back', acquisition_products_path %>
