--- a/app/views/acquisition_sales/show.html.erb
+++ b/app/views/acquisition_sales/show.html.erb
@@ -2,18 +2,18 @@
 
 <p>
   <strong>Product:</strong>
-  <%= @acquisition_sale.product %>
+  <%= @acquisition_product.product %>
 </p>
 
 <p>
   <strong>Qty:</strong>
-  <%= @acquisition_sale.qty %>
+  <%= @acquisition_product.qty %>
 </p>
 
 <p>
   <strong>Value:</strong>
-  <%= @acquisition_sale.value %>
+  <%= @acquisition_product.value %>
 </p>
 
-<%= link_to 'Edit', edit_acquisition_sale_path(@acquisition_sale) %> |
-<%= link_to 'Back', acquisition_sales_path %>
+<%= link_to 'Edit', edit_acquisition_product_path(@acquisition_product) %> |
+<%= link_to 'Back', acquisition_products_path %>
