--- a/app/views/product_sales/show.html.erb
+++ b/app/views/product_sales/show.html.erb
@@ -2,18 +2,18 @@
 
 <p>
   <strong>Product:</strong>
-  <%= @product_sale.product %>
+  <%= @sale_product.product %>
 </p>
 
 <p>
   <strong>Qty:</strong>
-  <%= @product_sale.qty %>
+  <%= @sale_product.qty %>
 </p>
 
 <p>
   <strong>Value:</strong>
-  <%= @product_sale.value %>
+  <%= @sale_product.value %>
 </p>
 
-<%= link_to 'Edit', edit_product_sale_path(@product_sale) %> |
-<%= link_to 'Back', product_sales_path %>
+<%= link_to 'Edit', edit_sale_product_path(@sale_product) %> |
+<%= link_to 'Back', sale_products_path %>
