--- a/app/views/acquisition_sales/_form.html.erb
+++ b/app/views/acquisition_sales/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(acquisition_sale) do |f| %>
-  <% if acquisition_sale.errors.any? %>
+<%= form_for(acquisition_product) do |f| %>
+  <% if acquisition_product.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(acquisition_sale.errors.count, "error") %> prohibited this acquisition_sale from being saved:</h2>
+      <h2><%= pluralize(acquisition_product.errors.count, "error") %> prohibited this acquisition_product from being saved:</h2>
 
       <ul>
-      <% acquisition_sale.errors.full_messages.each do |message| %>
+      <% acquisition_product.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
