--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,14 @@
   <head>
     <title>Myapp</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+      
+  <div class="content-wrapper">
     <%= yield %>
+  </div>
   </body>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </html>
