--- a/app/views/product_sales/edit.html.erb
+++ b/app/views/product_sales/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Product Sale</h1>
 
-<%= render 'form', product_sale: @product_sale %>
+<%= render 'form', sale_product: @sale_product %>
 
-<%= link_to 'Show', @product_sale %> |
-<%= link_to 'Back', product_sales_path %>
+<%= link_to 'Show', @sale_product %> |
+<%= link_to 'Back', sale_products_path %>
