--- a/app/views/product_sales/new.html.erb
+++ b/app/views/product_sales/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Product Sale</h1>
 
-<%= render 'form', product_sale: @product_sale %>
+<%= render 'form', sale_product: @sale_product %>
 
-<%= link_to 'Back', product_sales_path %>
+<%= link_to 'Back', sale_products_path %>
