--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Product</h1>
+<%= link_to 'Voltar', products_path,class: "btn btn-outline-success  mr-auto" %>
 
+<h1>Editar Produto</h1>
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
