--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Product</h1>
+<%= link_to 'Voltar', products_path,class: "btn btn-outline-success  mr-auto" %>
+
+<h1>Produto novo</h1>
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Back', products_path %>
+
+
