--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,19 +1,21 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'Voltar', products_path,class: "btn btn-outline-success  mr-auto" %>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
 
-<p>
-  <strong>Value:</strong>
-  <%= @product.value %>
-</p>
+  <div class="form-group">
+    <%= label_tag "Descrição" %>
+    <%= text_field_tag nil, @product.description, { class: "form-control", disabled: "true"} %>
+  </div>
 
-<p>
-  <strong>Cost value:</strong>
-  <%= @product.cost_value %>
-</p>
+  <div class="form-group">
+    <%= label_tag "Valor de venda" %>
+    <%= text_field_tag nil, @product.value, class: "form-control", disabled: "true" %>
+  </div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+  <div class="form-group">
+    <%= label_tag "Valor de custo" %>
+    <%= text_field_tag nil, @product.cost_value, class: "form-control", disabled: "true" %>
+  </div>
+
+<%= link_to 'Editar', edit_product_path(@product),class: "btn btn-outline-success  mr-auto" %>
+
