--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,14 +1,40 @@
-<p id="notice"><%= notice %></p>
+<h1>Venda</h1>
 
-<p>
-  <strong>Date:</strong>
-  <%= @sale.date %>
-</p>
+    <div class="d-flex flex-column mb-3">
+        <%= label_tag "Cliente" %>
+        <%= text_field_tag nil, "#{@sale.client.id} - #{@sale.client.name}", { class: "form-control", disabled: "true"} %>
+        </div>
+    </div>
+    <div class="d-flex flex-column mb-2">
+    <h4>PRODUTOS</h4>
+    <table class="table">
+    <thead>
+        <tr>
+        <th>Código</th>
+        <th>Descrição</th>
+        <th>Valor</th>
+        <th>Quantidade</th>
+        <th>Valor Total</th>
+        </tr>
+    </thead>
 
-<p>
-  <strong>Value:</strong>
-  <%= @sale.value %>
-</p>
+    <tbody>
+      <% @sale.sale_products.each do |sale_product| %>
+      <tr>
+        <td><%= sale_product.product.id %></td>
+        <td><%= sale_product.product.description %></td>
+        <td><%= sale_product.value %></td>
+        <td><%= sale_product.qty %></td>
+        <td><%= sale_product.value * sale_product.qty %></td>
+      </tr>
+    <% end %>
+    </tbody>
+    </table>
+    <div>
+    <%= text_field_tag "total", @sale.value, { class: "form-control text-right mb-5", disabled: "true"} %>
+    </div>
+
+   
 
 <%= link_to 'Edit', edit_sale_path(@sale) %> |
 <%= link_to 'Back', sales_path %>
