--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,12 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Sales</h1>
+<h1>Vendas</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Value</th>
+      <th>Código</th>
+      <th>Cliente</th>
+      <th>Data</th>
+      <th>Valor</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,11 +16,12 @@
   <tbody>
     <% @sales.each do |sale| %>
       <tr>
+        <td><%= sale.id %></td>
+        <td><%= "#{sale.client.id} - #{sale.client.name}" %></td>
         <td><%= sale.date %></td>
         <td><%= sale.value %></td>
-        <td><%= link_to 'Show', sale %></td>
-        <td><%= link_to 'Edit', edit_sale_path(sale) %></td>
-        <td><%= link_to 'Destroy', sale, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Visualizar', sale,class: "btn btn-outline-info  ml-auto" %></td>
+        <td><%= link_to 'Excluir', sale,class: "btn btn-outline-danger  ml-auto", method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Sale', new_sale_path %>
+<%= link_to 'Nova venda', new_sale_path,class: "btn btn-outline-success  ml-auto" %>
