--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,22 +1,9 @@
-<div class="row">
-  <div class="col-xs-10 col-xs-offset-1">
-    <% flash.each do |type, msg| %>
-      <% if type == "notice" %>
-        <div class="alert alert-success">
-      <% elsif type == "alert" %>
-        <div class="alert alert-danger">
-      <% else %>
-        <div class='alert alert-<%= "#{type}" %>'>
-      <% end %>
-      <a href="#" class="close" data-dismiss="alert">&#215;</a>
-      <ul>
-        <li>
-          <%= msg %>
-        </li>
-      </ul>
-    <% end %>
-  </div>
-</div>
+<% if flash[:alert] %>
+  <%=flash[:alert]%>
+<%end%>
+<% if flash[:notice] %>
+  <%=flash[:notice]%>
+<%end%>
 
 <h2>Sign up</h2>
 
